--- a/src/app/Returns/main-returns/main-returns.component.scss
+++ b/src/app/Returns/main-returns/main-returns.component.scss
@@ -1,6 +1,31 @@
 @import '~src/appTheme.scss';  
 $btnColumnShift: 72px;
 
+.loading-indicator {
+  position: fixed;
+  z-index: 999;
+  height: 2em;
+  width: 2em;
+  overflow: show;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+/* Transparent Overlay */
+.loading-indicator:before {
+  content: '';
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.3);
+}
+
 //Controls material expand/collapse buttons at all levels
 .returnsExpCollBtn{
   width:30px;
@@ -148,8 +173,7 @@ tr.mat-footer-row{
   padding-top: 6px;
   padding-bottom: 80px;
 }
-// Cell setting end
-      
+// Cell setting end      
 
 .phaseInfoBuffer{
   width:($btnColumnShift - 15);
