moved main returns toolbox inside of main returns component

--- a/src/app/Returns/Subviews/list-performance/list-performance.component.scss
+++ b/src/app/Returns/Subviews/list-performance/list-performance.component.scss
@@ -1,9 +1,8 @@
 @import '~src/appTheme.scss';  
 $btnColumnShift: 62px;
 
-//Toobox
-
-@import '~src/appTheme.scss';
+// <><><><><><><><><><><><><><><><><><><><><>
+//<><><><><> TOOLBOX SETTINGS START <><<><><>
 
 
 /*<><><><><><><><>*/
