--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -7,12 +7,13 @@
         <ng-container matColumnDef="Expand" >
             <th mat-header-cell *matHeaderCellDef class="expandBtnColumn"></th>
             <td mat-cell *matCellDef="let element" class="expandBtnColumn">
-                <button mat-icon-button (click)="ToggleExpansion(element)" class="returnsExpCollBtn">
+                <button mat-icon-button (click)="ToggleExpansion(element)" class="returnsExpCollBtn"
+                 [matTooltipShowDelay]="TTShow" [matTooltipHideDelay]="TTHide" matTooltip="Minimize Client">
                     <i class="material-icons" [ngClass]="CollapseListBtn(element) ? 'mi_arrow_drop_down' : 'mi_arrow_right'"></i>
                     <!-- [ngStyle]="{'visibility':CollapseListBtn(element) ? 'expand' : 'collapse'}" -->
                 </button>
                 <button mat-icon-button (click)="NextLevel(element, element.MailTypeList)"
-                    class="returnsExpCollBtn">
+                    class="returnsExpCollBtn" [matTooltipShowDelay]="TTShow" [matTooltipHideDelay]="TTHide" matTooltip="Collapse Mail Types">
                     <i class="material-icons" [ngClass]="ReadyToCollapseAll(this.rootReturns[0].MailTypeList) ? 'custom_line_weight_icon' : 'mi_drag_handle'"></i>
                 </button>
             </td>
