--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -1211,19 +1211,19 @@
     <div class="toolboxScrollContainer" [ngStyle]="{'visibility': visibility}">
         <p>
             <mat-form-field>
-                <mat-select [(value)]="client">
-                    <mat-option *ngFor="let client of ClientArr" [value]="client.gClientAcronym">
+                <mat-select [(value)]="this.selectedClients" multiple>
+                    <mat-option *ngFor="let client of ClientArr" [value]="client.gClientAcronym" multiple>
                         {{client.gClientName}}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
             <mat-form-field>
-                <input matInput [matDatepicker]="startDatePicker" [(ngModel)]="fromDate" placeholder="start date">
+                <input matInput [matDatepicker]="startDatePicker" [(ngModel)]="startDate" placeholder="start date">
                 <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
                 <mat-datepicker #startDatePicker></mat-datepicker>
             </mat-form-field>
             <mat-form-field>
-                <input matInput [matDatepicker]="endDatePicker" [(ngModel)]="toDate" placeholder="end date">
+                <input matInput [matDatepicker]="endDatePicker" [(ngModel)]="endDate" placeholder="end date">
                 <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
                 <mat-datepicker #endDatePicker></mat-datepicker>
             </mat-form-field>
