--- a/src/appTheme.scss
+++ b/src/appTheme.scss
@@ -222,6 +222,15 @@ $shiftStyle: cubic-bezier(0.175, 0.885, 0.32, 1.1);
       content: "arrow_forward_ios";
   }
 
+  .mi_settings::after{
+    content: "settings";
+  }
+
+  .mi_group::after{
+    content: "group";
+  }
+
+
   //Creating custom image that can be used as a class
   .custom_line_weight_icon{
     display: inline-block;
@@ -238,8 +247,6 @@ $shiftStyle: cubic-bezier(0.175, 0.885, 0.32, 1.1);
     margin-bottom: 7px !important;
     opacity: 0.9;
 }
-
-
 
 // <><><><><><><><><><><><><><><><><><><><><>
 // <><><> Variables across website End <><><>
