--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -1,7 +1,7 @@
 <nav class="topnav navbar navbar-expand-lg fixed-top">
   <a id="logoNavAnchor" routerLink="homepage"><span id="spanSD"><b>SD</b></span><span id="span360"><b>360</b></span></a>
   <button class="navbar-toggler active" id="navBarToggleBtn" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <i class="fa fa-bars"></i>
+      <i class="material-icons mi_drag_handle"></i>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarContent" >
