--- a/src/app/Returns/Subviews/list-performance/list-performance.component.html
+++ b/src/app/Returns/Subviews/list-performance/list-performance.component.html
@@ -9,7 +9,7 @@
       <th mat-header-cell *matHeaderCellDef class="expandBtnColumn"></th>
       <td mat-cell *matCellDef="let element" class="expandBtnColumn">
         <button mat-icon-button (click)="ToggleExpansion(element)" class="returnsExpCollBtn">
-          <i class="material-icons" [ngClass]="CollapseListBtn(element) ? 'mi_expand_more' : 'mi_chevron_right'"></i>
+          <i class="material-icons" [ngClass]="CollapseListBtn(element) ? 'mi_arrow_drop_up' : 'mi_arrow_right'"></i>
         </button>
       </td>
       <td mat-footer-cell *matFooterCellDef class="expandBtnColumn"> </td>
