--- a/src/app/Returns/main-returns/main-returns.component.scss
+++ b/src/app/Returns/main-returns/main-returns.component.scss
@@ -239,26 +239,26 @@ font-weight: bold;
 }
 
 //Controls the settings for the links to the list performance page from the list tables (prospect)
-.prospectListDescription{
-  a{
-    @include underlineOne;
-  }
-  span{ //required since the anchor tags would be shifted up by a couple pixels above the "/" span tags
-    position: relative;
-    color: inherit;
-    text-decoration: none;
-    overflow: hidden;
-    display: inline-block;
-    &:before{
-    position: absolute;
-      display: inline-block;
-      left: 0;
-      bottom: 0;
-      width: 100%;
-      height: 1px;
-    }
-  }
-}
+// .prospectListDescription{
+//   a{
+//     @include underlineOne;
+//   }
+//   span{ //required since the anchor tags would be shifted up by a couple pixels above the "/" span tags
+//     position: relative;
+//     color: inherit;
+//     text-decoration: none;
+//     overflow: hidden;
+//     display: inline-block;
+//     &:before{
+//     position: absolute;
+//       display: inline-block;
+//       left: 0;
+//       bottom: 0;
+//       width: 100%;
+//       height: 1px;
+//     }
+//   }
+// }
 
 .noCellBorder{
   border-top: none;
