list performance column ordering and styling

--- a/src/appTheme.scss
+++ b/src/appTheme.scss
@@ -126,6 +126,32 @@ $shiftStyle: cubic-bezier(0.175, 0.885, 0.32, 1.1);
 }
 
 
+// Loading spinner styling
+.loading-indicator {
+    position: fixed;
+    z-index: 999;
+    height: 2em;
+    width: 2em;
+    overflow: show;
+    margin: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+  }
+  /* Transparent Overlay */
+  .loading-indicator:before {
+    content: '';
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.3);
+  }
+
+
 //<><><> Material Icon's (mi) Converted to Classes <><><>
   .mi_expand_less::after{
     content: "expand_less";
