--- a/src/app/Returns/Subviews/list-performance/list-performance.component.html
+++ b/src/app/Returns/Subviews/list-performance/list-performance.component.html
@@ -14,6 +14,21 @@
       </td>
       <td mat-footer-cell *matFooterCellDef class="expandBtnColumn"> </td>
     </ng-container>
+    <ng-container matColumnDef="ListOwner">
+      <th mat-header-cell mat-sort-header *matHeaderCellDef title="List Owner"> List </th>
+      <td mat-cell *matCellDef="let element" title="{{ element.ListOwnerName }}"> {{element.ListOwnerAbr}} </td>
+      <!-- <td mat-footer-cell *matFooterCellDef> Total {{_g.rootReturns[0].Client}} </td> -->
+    </ng-container>
+    <ng-container matColumnDef="ListManager">
+      <th mat-header-cell mat-sort-header *matHeaderCellDef title="List Manager"> Manager </th>
+      <td mat-cell *matCellDef="let element" title="{{ element.ListManagerName }}"> {{element.ListManagerAbr}} </td>
+      <!-- <td mat-footer-cell *matFooterCellDef> Total {{_g.rootReturns[0].Client}} </td> -->
+    </ng-container>
+    <ng-container matColumnDef="RecencyString">
+      <th mat-header-cell mat-sort-header *matHeaderCellDef title="Recency/Segment"> Recency </th>
+      <td mat-cell *matCellDef="let element" title="{{ element.Description }}"> {{element.RecencyString}} </td>
+      <!-- <td mat-footer-cell *matFooterCellDef> Total {{_g.rootReturns[0].Client}} </td> -->
+    </ng-container>
     <ng-container matColumnDef="Client">
       <th mat-header-cell mat-sort-header *matHeaderCellDef> Client </th>
       <td mat-cell *matCellDef="let element"> {{element.Client}} </td>
@@ -29,83 +44,69 @@
       <td mat-cell *matCellDef="let element"> {{element.MailCode}} </td>
       <!-- <td mat-footer-cell *matFooterCellDef> Total {{_g.rootReturns[0].Client}} </td> -->
     </ng-container>
-    <ng-container matColumnDef="ListOwner">
-      <th mat-header-cell mat-sort-header *matHeaderCellDef> List </th>
-      <td mat-cell *matCellDef="let element" title="{{ element.ListOwnerName }}"> {{element.ListOwnerAbr}} </td>
-      <!-- <td mat-footer-cell *matFooterCellDef> Total {{_g.rootReturns[0].Client}} </td> -->
-    </ng-container>
-    <ng-container matColumnDef="ListManager">
-      <th mat-header-cell mat-sort-header *matHeaderCellDef> Manager </th>
-      <td mat-cell *matCellDef="let element" title="{{ element.ListManagerName }}"> {{element.ListManagerAbr}} </td>
-      <!-- <td mat-footer-cell *matFooterCellDef> Total {{_g.rootReturns[0].Client}} </td> -->
-    </ng-container>
-    <ng-container matColumnDef="RecencyString">
-      <th mat-header-cell mat-sort-header *matHeaderCellDef> Recency </th>
-      <td mat-cell *matCellDef="let element" title="{{ element.Description }}"> {{element.RecencyString}} </td>
-      <!-- <td mat-footer-cell *matFooterCellDef> Total {{_g.rootReturns[0].Client}} </td> -->
-    </ng-container>
-    <ng-container matColumnDef="ExchangeFlag">
-      <th mat-header-cell *matHeaderCellDef> FF </th>
-      <td mat-cell *matCellDef="let element"> {{element.ExchangeFlag}} </td>
+    <ng-container matColumnDef="ExchangeFlag" >
+      <th mat-header-cell *matHeaderCellDef title="Type of List Order (Rental, Exchange, or House" class="exchangeFlagColumn">T</th>
+      <td mat-cell *matCellDef="let element" class="exchangeFlagColumn"> {{element.ExchangeFlag}} </td>
       <!-- <td mat-footer-cell *matFooterCellDef> Total {{_g.rootReturns[0].Client}} </td> -->
     </ng-container>
     <ng-container matColumnDef="Mailed">
-      <th mat-header-cell mat-sort-header *matHeaderCellDef> Mailed </th>
+      <th mat-header-cell mat-sort-header *matHeaderCellDef title="Drop Date"> Mailed </th>
       <td mat-cell *matCellDef="let element"> {{element.Measure.Mailed | date:'shortDate'}} </td>
     </ng-container>
     <ng-container matColumnDef="Caged">
-      <th mat-header-cell mat-sort-header *matHeaderCellDef> Caged </th>
+      <th mat-header-cell mat-sort-header *matHeaderCellDef title="Date of most recent cage data"> Caged </th>
       <td mat-cell *matCellDef="let element"> {{element.Measure.Caged | date:'shortDate'}} </td>
     </ng-container>
     <ng-container matColumnDef="Quantity">
       <th mat-header-cell mat-sort-header *matHeaderCellDef> Qty </th>
       <td mat-cell *matCellDef="let element"> {{element.Measure.Quantity | number}} </td>
     </ng-container>
-    <ng-container matColumnDef="Donors">
-      <th mat-header-cell mat-sort-header *matHeaderCellDef> Don </th>
-      <td mat-cell *matCellDef="let element"> {{element.Measure.Donors | number}} </td>
-    </ng-container>
     <ng-container matColumnDef="NonDonors">
       <th mat-header-cell mat-sort-header *matHeaderCellDef> Non </th>
       <td mat-cell *matCellDef="let element"> {{element.Measure.NonDonors | number}} </td>
     </ng-container>
+    <ng-container matColumnDef="Donors">
+      <th mat-header-cell mat-sort-header *matHeaderCellDef> Donors </th>
+      <td mat-cell *matCellDef="let element"> {{element.Measure.Donors | number}} </td>
+    </ng-container>
+
     <ng-container matColumnDef="NewDonors">
       <th mat-header-cell mat-sort-header *matHeaderCellDef> New </th>
       <td mat-cell *matCellDef="let element"> {{element.Measure.NewDonors | number}} </td>
     </ng-container>
     <ng-container matColumnDef="RSP">
-      <th mat-header-cell mat-sort-header *matHeaderCellDef> RSP </th>
+      <th mat-header-cell mat-sort-header *matHeaderCellDef title="Response Rate"> Rsp </th>
       <td mat-cell *matCellDef="let element"> {{element.Measure.RSP | percent:'1.2-2'}} </td>
-    </ng-container>
-    <ng-container matColumnDef="AVG">
-      <th mat-header-cell mat-sort-header *matHeaderCellDef> AVG </th>
-      <td mat-cell *matCellDef="let element"> {{element.Measure.AVG | number:'1.2-2'}} </td>
     </ng-container>
     <ng-container matColumnDef="Gross">
       <th mat-header-cell mat-sort-header *matHeaderCellDef> Gross </th>
       <td mat-cell *matCellDef="let element"> {{element.Measure.Gross | currency : 'USD' : 'symbol' : '1.0-0'}} </td>
-    </ng-container>
-    <ng-container matColumnDef="Cost">
-      <th mat-header-cell mat-sort-header *matHeaderCellDef> Cost </th>
-      <td mat-cell *matCellDef="let element"> {{element.Measure.Cost | currency : 'USD' : 'symbol' : '1.0-0'}} </td>
     </ng-container>
     <ng-container matColumnDef="Net">
       <th mat-header-cell mat-sort-header *matHeaderCellDef> Net </th>
       <td mat-cell *matCellDef="let element" [class.negative]="element.Measure.Net < 0">
         {{element.Measure.Net | currency : 'USD' : 'symbol' : '1.0-0'}} </td>
     </ng-container>
-    <ng-container matColumnDef="GPP">
-      <th mat-header-cell mat-sort-header *matHeaderCellDef> GPP </th>
-      <td mat-cell *matCellDef="let element"> {{element.Measure.GPP | currency}} </td>
-    </ng-container>
-    <ng-container matColumnDef="CLM">
-      <th mat-header-cell mat-sort-header *matHeaderCellDef> CLM </th>
-      <td mat-cell *matCellDef="let element"> {{element.Measure.CLM | currency}} </td>
-    </ng-container>
     <ng-container matColumnDef="NLM">
-      <th mat-header-cell mat-sort-header *matHeaderCellDef> NLM </th>
+      <th mat-header-cell mat-sort-header *matHeaderCellDef title="Amount donated divided by quantity of letters mailed"> N$LM </th>
       <td mat-cell *matCellDef="let element" [class.negative]="element.Measure.NLM < 0">
         {{element.Measure.NLM | currency}} </td>
+    </ng-container>
+    <ng-container matColumnDef="AVG">
+      <th mat-header-cell mat-sort-header *matHeaderCellDef> Avg </th>
+      <td mat-cell *matCellDef="let element"> {{element.Measure.AVG | number:'1.2-2'}} </td>
+    </ng-container>
+    <ng-container matColumnDef="Cost">
+      <th mat-header-cell mat-sort-header *matHeaderCellDef> Cost </th>
+      <td mat-cell *matCellDef="let element"> {{element.Measure.Cost | currency : 'USD' : 'symbol' : '1.0-0'}} </td>
+    </ng-container>
+    <ng-container matColumnDef="CLM">
+      <th mat-header-cell mat-sort-header *matHeaderCellDef title="Cost per Letter Mailed"> CLM </th>
+      <td mat-cell *matCellDef="let element"> {{element.Measure.CLM | currency}} </td>
+    </ng-container>
+    <ng-container matColumnDef="GPP">
+      <th mat-header-cell mat-sort-header *matHeaderCellDef title="Amount grossed per Letter Mailed"> GLM </th>
+      <td mat-cell *matCellDef="let element"> {{element.Measure.GPP | currency}} </td>
     </ng-container>
     <ng-container matColumnDef="IO">
       <th mat-header-cell mat-sort-header *matHeaderCellDef> IO </th>
