changes to main returns toggle

--- a/src/app/Returns/main-returns/main-returns.component.scss
+++ b/src/app/Returns/main-returns/main-returns.component.scss
@@ -2,6 +2,10 @@
 
 $btnColumnShift: 72px; //used to control the left column for both parent and child tables
 
+// .selectionBoxUnchecked{
+//   background-color:red;
+// }
+
 table {
   width: 100%;
   //Controls the font sizing in all of the tables
