--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -3,13 +3,12 @@
   </div>
 <div *ngIf="this.pageReady == true">
     <app-toolbar></app-toolbar>
-    <table id="table1" mat-table [dataSource]="this.rootReturns" multiTemplateDataRows #PseudoDescription>
+    <table id="table1" mat-table [dataSource]="this.rootReturns" multiTemplateDataRows>
         <ng-container matColumnDef="Expand" >
             <th mat-header-cell *matHeaderCellDef class="expandBtnColumn"></th>
             <td mat-cell *matCellDef="let element" class="expandBtnColumn">
                 <button mat-icon-button (click)="ToggleExpansion(element)" class="returnsExpCollBtn">
                     <i class="material-icons" [ngClass]="CollapseListBtn(element) ? 'mi_arrow_drop_down' : 'mi_arrow_right'"></i>
-                    <!-- [ngStyle]="{'visibility':CollapseListBtn(element) ? 'expand' : 'collapse'}" -->
                 </button>
                 <button mat-icon-button (click)="NextLevel(element, element.MailTypeList)" class="returnsExpCollBtn">
                     <i class="material-icons" [ngClass]="ReadyToCollapseAll(this.rootReturns[0].MailTypeList) ? 'custom_line_weight_icon' : 'mi_drag_handle'"></i>
@@ -20,7 +19,9 @@
         <ng-container matColumnDef="selectionBox" >
                 <th mat-header-cell *matHeaderCellDef class="selectionBoxColumn"></th>
                 <td mat-cell *matCellDef="let element" class="selectionBoxColumn">
-                    <mat-checkbox *ngIf="showFilterColumn"></mat-checkbox>
+                    <mat-checkbox #clientTable [checked]="clientChecked" *ngIf="selectionMode == true" [ngClass]="{
+                        'selectionBoxUnchecked': !checked
+                    }"></mat-checkbox>
                 </td>
                 <td mat-footer-cell *matFooterCellDef class="selectionBoxColumn"></td>
         </ng-container>
@@ -169,7 +170,7 @@
             <ng-container matColumnDef="selectionBox">
                     <th mat-header-cell *matHeaderCellDef class="selectionBoxColumn"></th>
                     <td mat-cell *matCellDef="let element" class="selectionBoxColumn">
-                        <mat-checkbox *ngIf="showFilterColumn"></mat-checkbox>
+                        <mat-checkbox *ngIf="selectionMode == true"></mat-checkbox>
                     </td>
                     <td mat-footer-cell *matFooterCellDef class="selectionBoxColumn"></td>
             </ng-container>
@@ -340,7 +341,7 @@
                 <ng-container matColumnDef="selectionBox">
                         <th mat-header-cell *matHeaderCellDef class="selectionBoxColumn"></th>
                         <td mat-cell *matCellDef="let element" class="selectionBoxColumn">
-                            <mat-checkbox *ngIf="showFilterColumn"></mat-checkbox>
+                            <mat-checkbox *ngIf="selectionMode == true"></mat-checkbox>
                         </td>
                         <td mat-footer-cell *matFooterCellDef class="selectionBoxColumn"></td>
                 </ng-container>
@@ -572,7 +573,7 @@
         <ng-container matColumnDef="selectionBox">
                 <th mat-header-cell *matHeaderCellDef class="selectionBoxColumn"></th>
                 <td mat-cell *matCellDef="let element" class="selectionBoxColumn">
-                    <mat-checkbox *ngIf="showFilterColumn"></mat-checkbox>
+                    <mat-checkbox *ngIf="selectionMode == true"></mat-checkbox>
                 </td>
                 <td mat-footer-cell *matFooterCellDef class="selectionBoxColumn"></td>
         </ng-container>
@@ -886,7 +887,7 @@
         <ng-container matColumnDef="selectionBox">
                 <th mat-header-cell *matHeaderCellDef class="selectionBoxColumn"></th>
                 <td mat-cell *matCellDef="let element" class="selectionBoxColumn">
-                    <mat-checkbox *ngIf="showFilterColumn"></mat-checkbox>
+                    <mat-checkbox *ngIf="selectionMode == true"></mat-checkbox>
                 </td>
                 <td mat-footer-cell *matFooterCellDef class="selectionBoxColumn"></td>
         </ng-container>
@@ -1231,12 +1232,11 @@
             <button mat-raised-button color="accent" (click)="applyChanges()"> Search </button>
         </p>
         <div>
-            <p>
-                <mat-slide-toggle [(ngModel)]="selectionMode">
-                    Select Mode
+                <mat-slide-toggle [(ngModel)]="selectionMode" (change)="testChange(clientTable)">
+                    Omit Data
                 </mat-slide-toggle>
-            </p>
-            <table *ngIf="selectionMode == true">
+                <p>{{toggleChecked}}</p>
+            <!-- <table *ngIf="selectionMode == true">
                 <tr>
                     <td>
                         <button mat-raised-button color="accent" (click)="applySelection()"> Show Selected</button>
@@ -1245,7 +1245,7 @@
                         <button mat-raised-button color="accent" (click)="clearSelection()"> Show All</button>
                     </td>
                 </tr>
-            </table>
+            </table> -->
         </div>
     </div>
 </div>
