--- a/src/app/Returns/main-returns/main-returns.component.scss
+++ b/src/app/Returns/main-returns/main-returns.component.scss
@@ -6,6 +6,12 @@ $btnColumnShift: 72px; //used to control the left column for both parent and chi
 //   background-color:red;
 // }
 
+#testCheckbox{
+  mat-icon{
+    transform: scale(2);
+  }
+}
+
 table {
   width: 100%;
   //Controls the font sizing in all of the tables
