--- a/src/app/Returns/main-returns/main-returns.component.scss
+++ b/src/app/Returns/main-returns/main-returns.component.scss
@@ -7,8 +7,21 @@ $btnColumnShift: 72px; //used to control the left column for both parent and chi
 // }
 
 #testCheckbox{
-  mat-icon{
-    transform: scale(2);
+  label{
+    height: 40px !important;
+    width: 40px !important;
+    div.mat-checkbox-inner-container{
+      height: 40px !important;
+      width: 40px !important;
+      div{
+        height: 40px !important;
+        width: 40px !important;
+        svg{
+          height: 40px !important;
+          width: 40px !important;
+        }
+      }
+    }
   }
 }
 
