--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -12,7 +12,7 @@
                 </button>
                 <button mat-icon-button (click)="NextLevel(element, element.MailTypeList)" class="returnsExpCollBtn"
                     title="Collapse Mail Types">
-                    <i class="material-icons" [ngClass]="ReadyToCollapseAll(this.rootReturns[0].MailTypeList) ? 'custom_line_weight_icon' : 'mi_drag_handle'"></i>
+                    <i class="material-icons" [ngClass]="ReadyToCollapseAll(element.MailTypeList) ? 'custom_line_weight_icon' : 'mi_drag_handle'"></i>
                 </button>
             </td>
             <td mat-footer-cell *matFooterCellDef class="expandBtnColumn"> </td>.
@@ -34,7 +34,7 @@
                                                         'font-sm': GetVisibilityStyle(! element.Measure.Expanded) == 'expand'
                                                     }">
                 {{ element.ClientName }} </td>
-            <td mat-footer-cell *matFooterCellDef class="mailLevelColumn"> Total {{ element.ClientName }} </td>
+            <td mat-footer-cell *matFooterCellDef class="mailLevelColumn"> Total Clients </td>
         </ng-container>
         <ng-container matColumnDef="PseudoDescription">
             <th mat-header-cell *matHeaderCellDef class="descriptionColumn" [ngClass]="this.rootReturns[0].Measure.Expanded ? 'headerCollapsed' : 'headerExpanded'"></th>
@@ -49,101 +49,101 @@
         </ng-container>
         <ng-container matColumnDef="Mailed">
             <th mat-header-cell *matHeaderCellDef title="Drop Date"> Mailed </th>
-            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':this.rootReturns[0].Measure.Expanded ? 'collapse' : 'visible' }">
+            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':element.Measure.Expanded ? 'collapse' : 'visible' }">
                 {{element.Measure.Mailed | date:'shortDate'}} </td>
-            <td mat-footer-cell *matFooterCellDef> {{this.rootReturns[0].Measure.Mailed | date:'shortDate'}} </td>
+            <td mat-footer-cell *matFooterCellDef> {{ this.grandTotal.Mailed | date:'shortDate'}} </td>
         </ng-container>
         <ng-container matColumnDef="Caged">
             <th mat-header-cell *matHeaderCellDef title="Date of most recent cage data"> Caged </th>
-            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':this.rootReturns[0].Measure.Expanded ? 'collapse' : 'visible' }">
+            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':element.Measure.Expanded ? 'collapse' : 'visible' }">
                 {{element.Measure.Caged | date:'shortDate'}} </td>
-            <td mat-footer-cell *matFooterCellDef> {{this.rootReturns[0].Measure.Caged | date:'shortDate'}} </td>
+            <td mat-footer-cell *matFooterCellDef> {{ this.grandTotal.Caged | date:'shortDate'}} </td>
         </ng-container>
         <ng-container matColumnDef="Quantity">
             <th mat-header-cell *matHeaderCellDef> Qty </th>
-            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':this.rootReturns[0].Measure.Expanded ? 'collapse' : 'visible' }">
+            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':element.Measure.Expanded ? 'collapse' : 'visible' }">
                 {{element.Measure.Quantity | number}} </td>
-            <td mat-footer-cell *matFooterCellDef> {{this.rootReturns[0].Measure.Quantity | number}} </td>
+            <td mat-footer-cell *matFooterCellDef> {{ this.grandTotal.Quantity | number}} </td>
         </ng-container>
         <ng-container matColumnDef="NonDonors">
             <th mat-header-cell *matHeaderCellDef> Non </th>
-            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':this.rootReturns[0].Measure.Expanded ? 'collapse' : 'visible' }">
+            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':element.Measure.Expanded ? 'collapse' : 'visible' }">
                 {{element.Measure.NonDonors | number}} </td>
-            <td mat-footer-cell *matFooterCellDef> {{this.rootReturns[0].Measure.NonDonors | number}} </td>
+            <td mat-footer-cell *matFooterCellDef> {{ this.grandTotal.NonDonors | number}} </td>
         </ng-container>
         <ng-container matColumnDef="Donors">
             <th mat-header-cell *matHeaderCellDef> Donors </th>
-            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':this.rootReturns[0].Measure.Expanded ? 'collapse' : 'visible' }">
+            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':element.Measure.Expanded ? 'collapse' : 'visible' }">
                 {{element.Measure.Donors | number}} </td>
-            <td mat-footer-cell *matFooterCellDef> {{this.rootReturns[0].Measure.Donors | number}} </td>
+            <td mat-footer-cell *matFooterCellDef> {{ this.grandTotal.Donors | number}} </td>
         </ng-container>
         <ng-container matColumnDef="NewDonors">
             <th mat-header-cell *matHeaderCellDef> New </th>
-            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':this.rootReturns[0].Measure.Expanded ? 'collapse' : 'visible' }">
+            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':element.Measure.Expanded ? 'collapse' : 'visible' }">
                 {{element.Measure.NewDonors | number}} </td>
-            <td mat-footer-cell *matFooterCellDef> {{this.rootReturns[0].Measure.NewDonors | number}} </td>
+            <td mat-footer-cell *matFooterCellDef> {{ this.grandTotal.NewDonors | number}} </td>
         </ng-container>
         <ng-container matColumnDef="RSP">
             <th mat-header-cell *matHeaderCellDef title="Response Rate"> Rsp </th>
-            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':this.rootReturns[0].Measure.Expanded ? 'collapse' : 'visible' }">
+            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':element.Measure.Expanded ? 'collapse' : 'visible' }">
                 {{element.Measure.RSP | percent:'1.2-2'}} </td>
-            <td mat-footer-cell *matFooterCellDef> {{this.rootReturns[0].Measure.RSP | percent:'1.2-2'}} </td>
+            <td mat-footer-cell *matFooterCellDef> {{ this.grandTotal.RSP | percent:'1.2-2'}} </td>
         </ng-container>
         <ng-container matColumnDef="Gross">
             <th mat-header-cell *matHeaderCellDef> Gross </th>
-            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':this.rootReturns[0].Measure.Expanded ? 'collapse' : 'visible' }">
+            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':element.Measure.Expanded ? 'collapse' : 'visible' }">
                 {{element.Measure.Gross | currency : 'USD' : 'symbol' : '1.0-0'}} </td>
-            <td mat-footer-cell *matFooterCellDef> {{this.rootReturns[0].Measure.Gross | currency : 'USD' : 'symbol' :
+            <td mat-footer-cell *matFooterCellDef> {{ this.grandTotal.Gross | currency : 'USD' : 'symbol' :
                 '1.0-0'}}
             </td>
         </ng-container>
         <ng-container matColumnDef="Net">
             <th mat-header-cell *matHeaderCellDef> Net </th>
-            <td mat-cell *matCellDef="let element" [class.negative]="element.Measure.Net < 0" [ngStyle]="{'visibility':this.rootReturns[0].Measure.Expanded ? 'collapse' : 'visible' }">
+            <td mat-cell *matCellDef="let element" [class.negative]="element.Measure.Net < 0" [ngStyle]="{'visibility':element.Measure.Expanded ? 'collapse' : 'visible' }">
                 {{element.Measure.Net | currency : 'USD' : 'symbol' : '1.0-0'}} </td>
             <td mat-footer-cell *matFooterCellDef [class.negative]="this.rootReturns[0].Measure.Net < 0">
-                {{this.rootReturns[0].Measure.Net | currency : 'USD' : 'symbol' : '1.0-0'}} </td>
+                {{ this.grandTotal.Net | currency : 'USD' : 'symbol' : '1.0-0'}} </td>
         </ng-container>
         <ng-container matColumnDef="NLM">
             <th mat-header-cell *matHeaderCellDef title="Amount donated divided by quantity of letters mailed"> N$LM
             </th>
-            <td mat-cell *matCellDef="let element" [class.negative]="element.Measure.NLM < 0" [ngStyle]="{'visibility':this.rootReturns[0].Measure.Expanded ? 'collapse' : 'visible' }">
+            <td mat-cell *matCellDef="let element" [class.negative]="element.Measure.NLM < 0" [ngStyle]="{'visibility':element.Measure.Expanded ? 'collapse' : 'visible' }">
                 {{element.Measure.NLM | currency}} </td>
             <td mat-footer-cell *matFooterCellDef [class.negative]="this.rootReturns[0].Measure.NLM < 0">
-                {{this.rootReturns[0].Measure.NLM | currency}}
+                {{ this.grandTotal.NLM | currency}}
             </td>
         </ng-container>
         <ng-container matColumnDef="AVG">
             <th mat-header-cell *matHeaderCellDef> Avg </th>
-            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':this.rootReturns[0].Measure.Expanded ? 'collapse' : 'visible' }">
+            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':element.Measure.Expanded ? 'collapse' : 'visible' }">
                 {{element.Measure.AVG | number:'1.2-2'}} </td>
-            <td mat-footer-cell *matFooterCellDef> {{this.rootReturns[0].Measure.AVG | number:'1.2-2'}} </td>
+            <td mat-footer-cell *matFooterCellDef> {{ this.grandTotal.AVG | number:'1.2-2'}} </td>
         </ng-container>
         <ng-container matColumnDef="Cost">
             <th mat-header-cell *matHeaderCellDef> Cost </th>
-            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':this.rootReturns[0].Measure.Expanded ? 'collapse' : 'visible' }">
+            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':element.Measure.Expanded ? 'collapse' : 'visible' }">
                 {{element.Measure.Cost | currency : 'USD' : 'symbol' : '1.0-0'}} </td>
-            <td mat-footer-cell *matFooterCellDef> {{this.rootReturns[0].Measure.Cost | currency : 'USD' : 'symbol' :
+            <td mat-footer-cell *matFooterCellDef> {{ this.grandTotal.Cost | currency : 'USD' : 'symbol' :
                 '1.0-0'}}
             </td>
         </ng-container>
         <ng-container matColumnDef="CLM">
             <th mat-header-cell *matHeaderCellDef title="Cost per Letter Mailed"> CLM </th>
-            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':this.rootReturns[0].Measure.Expanded ? 'collapse' : 'visible' }">
+            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':element.Measure.Expanded ? 'collapse' : 'visible' }">
                 {{element.Measure.CLM | currency}} </td>
-            <td mat-footer-cell *matFooterCellDef> {{this.rootReturns[0].Measure.CLM | currency}} </td>
+            <td mat-footer-cell *matFooterCellDef> {{ this.grandTotal.CLM | currency}} </td>
         </ng-container>
         <ng-container matColumnDef="GPP">
             <th mat-header-cell *matHeaderCellDef title="Amount grossed per Letter Mailed"> GLM </th>
-            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':this.rootReturns[0].Measure.Expanded ? 'collapse' : 'visible' }">
+            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':element.Measure.Expanded ? 'collapse' : 'visible' }">
                 {{element.Measure.GPP | currency}} </td>
-            <td mat-footer-cell *matFooterCellDef> {{this.rootReturns[0].Measure.GPP | currency}} </td>
+            <td mat-footer-cell *matFooterCellDef> {{ this.grandTotal.GPP | currency}} </td>
         </ng-container>
         <ng-container matColumnDef="IO">
             <th mat-header-cell *matHeaderCellDef> IO </th>
-            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':this.rootReturns[0].Measure.Expanded ? 'collapse' : 'visible' }">
+            <td mat-cell *matCellDef="let element" [ngStyle]="{'visibility':element.Measure.Expanded ? 'collapse' : 'visible' }">
                 {{element.Measure.IO | number : '1.2-2'}} </td>
-            <td mat-footer-cell *matFooterCellDef> {{this.rootReturns[0].Measure.IO | number : '1.2-2'}} </td>
+            <td mat-footer-cell *matFooterCellDef> {{ this.grandTotal.IO | number : '1.2-2'}} </td>
         </ng-container>
 
 
@@ -1216,6 +1216,8 @@
     [class.example-expanded-row]="element.Measure.Expanded">
 </tr>
 <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+<tr mat-footer-row *matFooterRowDef="clientDisplayedColumns"
+    class="clientElementDefault"></tr>
 </table>
 </div>
 
