--- a/src/app/Returns/Subviews/list-performance/list-performance.component.html
+++ b/src/app/Returns/Subviews/list-performance/list-performance.component.html
@@ -117,13 +117,15 @@
   'PackageDonors', 'PackageNonDonors', 'PackageNewDonors', 'PackageRSP', 'PackageAVG', 
   'PackageGross', 'PackageCost', 'PackageNet', 'PackageGPP', 'PackageCLM', 'PackageNLM', 'PackageIO']; -->
 
-    <ng-container matColumnDef="PackageTitle">
-      <td mat-cell *matCellDef="let element"> {{element.PackageTitle}} </td>
+  <ng-container matColumnDef="detailsColumn">
+    <td mat-cell *matCellDef="let element" colspan="22"> {{element.PackageTitle}} </td>
+  </ng-container>
+    <!-- <ng-container matColumnDef="PackageTitle">
+      <td mat-cell *matCellDef="let element" colspan="6"> {{element.PackageTitle}} </td>
     </ng-container>
     <ng-container matColumnDef="PackageFormat">
-      <td mat-cell *matCellDef="let element"> {{element.PackageFormat}} </td>
-      <!-- <td mat-footer-cell *matFooterCellDef> Total {{_g.rootReturns[0].Client}} </td> -->
-    </ng-container>
+      <td mat-cell *matCellDef="let element" colspan="6"> {{element.PackageFormat}} </td>
+    </ng-container> -->
     <ng-container matColumnDef="None">
       <td mat-cell *matCellDef="let element"> </td>
     </ng-container>
@@ -192,9 +194,9 @@
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" [ngStyle]="{'background-color':element.Measure.Expanded ? '#e6e6e6' : 'white' }">
     </tr>
-    <tr mat-row *matRowDef="let element; columns: packageColumns;" [ngStyle]="{'visibility':element.Measure.Expanded ? 'visible' : 'collapse' }"
+    <tr mat-row *matRowDef="let element; columns: detailsColumns;" [ngStyle]="{'visibility':element.Measure.Expanded ? 'visible' : 'collapse' }"
       style="background-color:#F8F8F8"></tr>
-    <tr mat-row *matRowDef="let element; columns: package2Columns;" [ngStyle]="{'visibility':element.Measure.Expanded ? 'visible' : 'collapse' }"
+    <tr mat-row *matRowDef="let element; columns: packageColumns;" [ngStyle]="{'visibility':element.Measure.Expanded ? 'visible' : 'collapse' }"
       style="background-color:#F8F8F8"></tr>
   </table>
 </div>
